@@ -383,6 +383,10 @@ class ModelStorage(Model):
                         del data[field_name]
                     elif data[field_name]:
                         data[field_name] = [('add', data[field_name])]
+                elif ftype == 'binary':
+                    # Copy only file_id
+                    if field.file_id and origin.get(field.file_id):
+                        del data[field_name]
             if 'id' in data:
                 del data['id']
             return data
